<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023. Bernard Bou
  -->

<ListView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@android:id/list"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_centerHorizontal="true"
	android:choiceMode="singleChoice"
	android:focusable="true" />
