<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              style="@style/Label.Group"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              tools:ignore="UnusedResources">

	<TextView
		android:id="@+id/xn"
		style="@style/Label.GroupName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textIsSelectable="false"/>

</LinearLayout>