<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023. Bernard Bou
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<!-- x selectors -->
	<FrameLayout
		android:id="@+id/container_xselectors"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

	<!-- detail -->
	<androidx.fragment.app.FragmentContainerView
		android:id="@+id/container_browse2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone" />

</RelativeLayout>