<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="start|center_vertical"
              android:orientation="horizontal">

	<Spinner
		android:id="@+id/spinner"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start|center_vertical"
		android:gravity="start|center_vertical"/>

</LinearLayout>